# minecraft-protocol

./: .gitignore  Cargo.toml  README.md
minecraft-external/: Cargo.toml  README.md
minecraft-external/src/: game_data.rs  json.rs  lib.rs
minecraft-game-logic/: Cargo.toml  README.md
minecraft-game-logic/src/: block_drop_registry.rs  block_item_interactions.rs  block_placement_registry.rs  block_registry.rs  block_state_registry.rs  item_click_registry.rs  lib.rs  recipes.rs  tool_type.rs
minecraft-protocol/: Cargo.toml  README.md
minecraft-protocol-derive/: README.md
minecraft-protocol/src/: interactions.rs  lib.rs
minecraft-protocol/src/components/: .gitignore  animations.rs  blocks.rs  chunk.rs  entity.rs  item_placement.rs  mod.rs  particle.rs  slots.rs
minecraft-protocol/src/data/: block_states.rs  blocks.rs  entities.rs  items.rs  mod.rs  recipes.rs
minecraft-protocol/src/ids/: block_states.rs  blocks.rs  entities.rs  items.rs  recipes.rs
minecraft-protocol/src/packets/: play_clientbound.rs  play_serverbound.rs
minecraft-vanilla/: Cargo.toml
minecraft-vanilla/data/: .gitignore
minecraft-vanilla/src/: lib.rs
minecraft-vanilla/src/ids/: .gitignore  recipes.rs
minecraft-vanilla/src/registries/: block_drop_registry.rs  block_state_registry.rs  mod.rs  recipes.rs
