[package]
name = "minecraft-protocol"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
build = "build/build.rs"

[dependencies]
minecraft-protocol-derive = {path="../minecraft-protocol-derive"}
# TODO replace once https://doc.rust-lang.org/core/random/trait.Random.html is stable
rand = "0.9.1"

[build-dependencies]
minreq = {version="2.3", features=["https"]}
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}
convert_case = "0.6"

[features]
all-packets = []
